[gd_scene load_steps=4 format=2]

[ext_resource path="res://Screens/MainMenu.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Music/Menu music.wav" type="AudioStream" id=3]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="main_bg" type="Sprite" parent="."]
position = Vector2( 515, 300.5 )
scale = Vector2( 0.814063, 0.851389 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayBtn" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 380.0
margin_top = 234.0
margin_right = 651.0
margin_bottom = 278.0

[node name="AboutBtn" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 379.0
margin_top = 301.0
margin_right = 650.0
margin_bottom = 345.0

[node name="HelpBtn" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 380.0
margin_top = 371.0
margin_right = 651.0
margin_bottom = 415.0

[node name="StoryBtn" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 379.0
margin_top = 436.0
margin_right = 650.0
margin_bottom = 480.0

[node name="ExitBtn" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 380.0
margin_top = 500.0
margin_right = 651.0
margin_bottom = 544.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="AboutBtn" to="." method="_on_AboutBtn_pressed"]
[connection signal="pressed" from="HelpBtn" to="." method="_on_HelpBtn_pressed"]
[connection signal="pressed" from="StoryBtn" to="." method="_on_StoryBtn_pressed"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
